# rich-gemini-cli

./: .gitignore  GEMINI.md  README.md  config.py  env.example  gemini.py  main.py  pyproject.toml  run.sh
